--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #444;
 }
 
 a {
@@ -18,9 +19,30 @@ a {
   padding-left: 6rem;
   text-align: center;
 }
+.navbar-brand {
+  padding-left: 1rem;
+}
+.container {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .col-sm-8 {
   padding-top: 2rem;
+  padding-bottom: 1rem;
 }
 .zform-inline {
   width: 30%;
+}
+.econtainer {
+  color: #444;
+  height: 50%;
+  padding-left: 4rem;
+}
+.econtainer h5 {
+  color: white;
+  margin-bottom: 3rem;
+}
+
+.econtainer p {
+  color: white;
 }
