--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,3 +46,11 @@ a {
 .econtainer p {
   color: white;
 }
+.btn {
+  margin-left: 1rem;
+}
+.logo-user {
+  width: 4rem;
+  height: 3rem;
+  padding-right: 1rem;
+}
