--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #444;
+  color: black;
 }
 
 a {
@@ -53,4 +54,8 @@ a {
   width: 4rem;
   height: 3rem;
   padding-right: 1rem;
+}
+.ecard {
+  width: 50%;
+  margin-left: 23%;
 }
